# Kopalnia_OS

./: .gitignore  .gitmodules  CMakeLists.txt  build.bash  hello.cpp  limine.conf  linker.ld  my_vars.fd  readme.md  setup-TAP.sh
IDT/: Handlers.cpp  IDT.cpp  IDT.hpp  PIT.cpp  PIT.hpp
UEFI_BOOT/: Loader.cpp  boot.cpp  boot.hpp  boot_shared.cpp  boot_shared.h
isodir/boot/: kobylnik_os
isodir/boot/grub/: grub.cfg
src/: 64bit.asm  Kernel.cpp  boot.asm  kernel.h  kernel_entry.cpp  kernel_entry.h
src/Drivers/: Keyboard.cpp  Keyboard.hpp  PCI.cpp  PCI.hpp  cursor.cpp  cursor.h  mmio.hpp  types.h  vga.cpp  vga.h
src/Drivers/GPU/: framebuffer.cpp  framebuffer.hpp  glyphs.cpp  glyphs.h
src/Drivers/GPU/Intel_igpu/: gpu_firmware.cpp  kbl_dmc_ver1_04.bin.inc  kbl_guc_32.0.3.bin.inc  load_firmware.cpp  main.cpp  main.hpp
src/Drivers/Network/: Common.cpp  Common.hpp  Ethernet.cpp  Ethernet.hpp  Net_Device.hpp  RTL8139.cpp  RTL8139.hpp
src/Drivers/Network/ARP/: ARP.cpp  ARP.hpp
src/Drivers/Network/Drivers/: RTL8139.cpp  RTL8139.hpp
src/Drivers/Network/IPv4/: ICMP.cpp  ICMP.hpp  IPv4.cpp  IPv4.hpp  UDP.cpp  UDP.hpp
src/Drivers/USB/: usb.cpp  usb.hpp  xhci_regs.cpp  xhci_regs.hpp
src/Drivers/USB/xHCI/: xHCI.cpp  xHCI.hpp  xHCI_common.hpp  xHCI_device.cpp  xHCI_device.hpp  xHCI_device_ctx.cpp  xHCI_device_ctx.hpp  xHCI_ext_cap.hpp  xHCI_mem.cpp  xHCI_mem.hpp  xHCI_regs.cpp  xHCI_regs.hpp  xHCI_rings.cpp  xHCI_rings.hpp  xHCI_trb.hpp
src/Drivers/achi/: ahci.cpp  ahci.h  ahci_device.cpp  ahci_device.h  ahci_helper.h  ahci_port.cpp  ahci_port.h
src/Drivers/acpi/: acpi.cpp  acpi.h  uacpi_config.h  uacpi_impl.cpp
src/Drivers/ata/: ata.cpp  ata.h  ata_constants.h  fis.h
src/Drivers/fs/partition/: gpt_partition.h  partition_manager.cpp  partition_manager.h
src/Drivers/ps2/: ps2.cpp
src/PLlib/: Ring_Buffer.hpp  String_common.cpp  String_common.hpp  mem_common.cpp  mem_common.hpp  types.hpp
src/PLlib/glm/: types.hpp
src/PLlib/std/: printf.cpp  printf.hpp  string.cpp  string.h
src/arch/x86/Common/: common.cpp  common.hpp
src/arch/x86/GDT/: GDT.cpp  GDT.hpp
src/arch/x86/IDT/: Handlers.cpp  IDT.asm  IDT.cpp  IDT.hpp  PIT.cpp  PIT.hpp
src/arch/x86_64/Common/: Common.cpp  Common.hpp
src/arch/x86_64/IDT/: APIC.cpp  APIC.hpp  IDT.cpp  IDT.hpp  PIT.cpp  PIT.hpp  handlers.asm  handlers.cpp  uacpi_handlers.cpp
src/arch/x86_64/gdt/: gdt.cpp  gdt.h
src/arch/x86_64/syscall/: syscall.asm  syscall.cpp  syscall.h
src/kernel/: Framebuffer.cpp  Framebuffer.hpp  Paging.cpp  Paging.hpp  Sleep.cpp  Sleep.hpp  enter_user_space.asm  linker_info.hpp  log.h  multiboot2.cpp  multiboot2.hpp  system.cpp  system.hpp  systemPL.cpp  systemPL.hpp
src/kernel/Memory/: heap.cpp  heap.hpp  mem_helper.h  memory.cpp
src/libs/: String_common.cpp  String_common.hpp
src/libs/std/: Ring_Buffer.hpp  mem_common.cpp  mem_common.hpp  printf.cpp  printf.hpp  string.cpp  string.h  types.hpp  vector.hpp
src_boot/: Paging.asm  boot.asm  boot_strap.cpp  elevate.asm  gdt.asm  kernel_main.cpp  print.asm  setup.asm
